tests/type-errors/no_big_map_value_type.arl
archetype no_big_map_value_type

variable m : big_map<nat, big_map<nat, int>> = []

entry exec () {
  ()
}
